# mesh

./: .gitignore  Cargo.toml  HOCKEY_EQUIPMENT_ANALYSIS.md
.github/workflows/: ci.yml
crates/mesh-cli/src/: main.rs
crates/mesh-cli/src/commands/: convert.rs  decimate.rs  info.rs  repair.rs  shell.rs  slice.rs  validate.rs
crates/mesh-gpu/benches/: gpu_benchmarks.rs
crates/mesh-gpu/src/: buffers.rs  collision.rs  context.rs  error.rs  lib.rs  sdf.rs  surface_nets.rs
crates/mesh-repair/: Cargo.toml
crates/mesh-repair/benches/: mesh_benchmarks.rs
crates/mesh-repair/examples/: hockey_equipment.rs
crates/mesh-repair/fuzz/: Cargo.toml
crates/mesh-repair/fuzz/fuzz_targets/: fuzz_3mf.rs  fuzz_obj.rs  fuzz_ply.rs  fuzz_stl.rs
crates/mesh-repair/src/: assembly.rs  boolean.rs  builder.rs  components.rs  decimate.rs  edge_cases.rs  error.rs  fitting.rs  holes.rs  intersect.rs  io.rs  lattice.rs  lib.rs  measure.rs  morph.rs  multiscan.rs  pipeline.rs  pointcloud.rs  printability.rs  progress.rs  region.rs  registration.rs  remesh.rs  repair.rs  scan.rs  slice.rs  step.rs  subdivide.rs  template.rs  thickness.rs  tracing_ext.rs  types.rs  validate.rs  winding.rs
crates/mesh-repair/tests/: coverage_tests.rs  cross_validation.rs  format_conformance.rs  integration_tests.rs  proptest_mesh.rs  thingi10k_conformance.rs  visual_regression.rs
crates/mesh-shell/: Cargo.toml
crates/mesh-shell/benches/: shell_benchmarks.rs
crates/mesh-shell/src/: builder.rs  error.rs  lib.rs
crates/mesh-shell/src/offset/: adaptive.rs  extract.rs  grid.rs  mod.rs  sdf.rs  transfer.rs
crates/mesh-shell/src/shell/: generate.rs  mod.rs  rim.rs  validation.rs
